@@ -263,6 +263,10 @@ If no match is found \var{filename} is returned.
 This does not equal a failure since it could be the path to the file.
 \end{funcdesc}
 
+\begin{funcdesc}{guard_warnings_filter}{}
+Returns a context manager that guards the \module{warnings} module's
+filter settings.
+
 \begin{funcdesc}{run_unittest}{*classes}
 Execute \class{unittest.TestCase} subclasses passed to the function.
 The function scans the classes for methods starting with the prefix
